--- a/client/src/TokenReinforcementBoard.css
+++ b/client/src/TokenReinforcementBoard.css
@@ -1,9 +1,9 @@
 .token-reinforcement-board-container{
-    width: 1000px;
-    height: 500px;
-    margin-left: 90px;
-    margin-right: 100px;
-    padding: 5px;
+    width: 90%;
+    height: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: .5%;
     border: solid black 2px;
     /* display: flex; */
 }
@@ -15,12 +15,18 @@
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
     font-size: 50px;
     font-weight: 100;
-    margin-right: 300px;
+    margin-right: 30%;
 }
 
 .token-reinforcement-board-square{
     border: solid black 2px;
-    width: 150px;
+    width: 15%;
     height: 150px; 
-    margin-top: 50px;
+    margin-top: 5%;
+}
+
+.star{
+    color: gold;
+    position: absolute;
+    bottom: 20%;
 }
