--- a/client/src/Contact.css
+++ b/client/src/Contact.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     justify-content: space-around;
-    margin-top: 180px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-top: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
     background-color: #a5a6f6;
-    padding: 50px 100px;
+    padding: 10%;
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
     font-weight: 100;
 }
