--- a/client/src/FirstThenBoard.css
+++ b/client/src/FirstThenBoard.css
@@ -1,9 +1,9 @@
 .first-then-board-container{
-    width: 1000px;
-    height: 500px;
-    margin-left: 90px;
-    margin-right: 100px;
-    padding: 5px;
+    width: 95%;
+    height: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: .5%;
     border: solid black 2px;
 }
 
