--- a/client/src/TokenReinforcementPage.css
+++ b/client/src/TokenReinforcementPage.css
@@ -4,11 +4,11 @@
 }
 
 .left{
-    width: 215px;
-    margin: 5px;
+    width: 20%;
+    margin: 0;
 }
 
 .right{
-    width: 1100px;
-    margin: 5px;
+    width: 80%;
+    margin: .5%;
 }
