--- a/client/src/NewVisualForm.css
+++ b/client/src/NewVisualForm.css
@@ -1,21 +1,18 @@
 .new-visual-form-container{
     margin-top: 5%;
-    margin-left: 5%;
+    margin-left: 25%;
+    padding: 3%;
     background-color: #a5a6f6;
     width: 40%;
-    border: solid black 2px;
-    border-radius: 5px;
+    text-align: center;
+    font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
+    font-size: 20px;
+    font-weight: 100;
 }
 
 .new-visual-form-container h4{
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 100;
     margin: 0;
-}
-
-.new-visual-form{
-    /* width: 20%; */
-    /* border: solid black 2px;
-    border-radius: 5px; */
 }
