css to buttons in app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,49 +1,41 @@
-
-
-
-
-
-
-
-
-
-
-
-/* .App {
-  text-align: center;
+button{
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #212121;
+  cursor: pointer;
+  transition: 0.4s;
+  color: #431991;
+  border: 2px solid #431991;
+  background-image: linear-gradient(to top, transparent 50%, #431991 50%);
+  background-size: 100% 200%;
+  background-position: 0% 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button:hover{
+  color: #fff;
+  background-position: 0% 0%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.submit{
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  color: #212121;
+  cursor: pointer;
+  transition: 0.4s;
+  color: #431991;
+  border: 2px solid #431991;
+  background-image: linear-gradient(to top, transparent 50%, #431991 50%);
+  background-size: 100% 200%;
+  background-position: 0% 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.submit:hover{
+  color: #fff;
+  background-position: 0% 0%;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
