--- a/client/src/FirstThenCardCollection.css
+++ b/client/src/FirstThenCardCollection.css
@@ -1,3 +1,7 @@
 .first-then-card-collection{
     overflow-y: auto;
+    width: 80%;
+    height: 35%;
+    background-color: #f1f0ff;
+    padding-left: 5%;
 }
