added search bar and fixed responsiveness of some css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,15 @@
-body{
+/* body{
   margin: 0;
+} */
+
+html, body {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+}
+
+#root {
+  height: 100vh;
 }
 
 button{
