--- a/client/src/NewVisualForm.css
+++ b/client/src/NewVisualForm.css
@@ -1,5 +1,5 @@
 .new-visual-form-container{
-    margin-top: 5%;
+    margin-top: 50vh;
     margin-left: 25%;
     padding: 3%;
     background-color: #a5a6f6;
