--- a/client/src/TokenReinforcementCardCollection.css
+++ b/client/src/TokenReinforcementCardCollection.css
@@ -1,7 +1,7 @@
-.token-reinforcement-card-collection{
+/* .token-reinforcement-card-collection{
     overflow-y: auto;
     width: 80%;
     height: 35%;
     background-color: #f1f0ff;
     padding-left: 5%;
-}
+} */
