--- a/client/src/FirstThenBoard.css
+++ b/client/src/FirstThenBoard.css
@@ -4,8 +4,8 @@
     margin-left: 1%;
     margin-right: 1%;
     padding: .5%;
-    border: solid black 2px;
-    border-radius: 5px;
+    /* border: solid black 2px;
+    border-radius: 5px; */
 }
 
 .first-then-board{
