--- a/client/src/FirstThenPage.css
+++ b/client/src/FirstThenPage.css
@@ -1,11 +1,12 @@
 .first-then-page{
     display: flex;
-    /* justify-content: space-between; */
 }
 
 .left{
     width: 20%;
     margin: 0;
+    overflow-y: auto;
+    height: 100vh;
 }
 
 .right{
