--- a/client/src/TokenReinforcementPage.css
+++ b/client/src/TokenReinforcementPage.css
@@ -3,10 +3,11 @@
 }
 
 .left{
-    width: 20%;
+    width: 16%;
     margin: 0;
     overflow-y: auto;
     height: 100vh;
+    background-color: #f1f0ff;
 }
 
 .right{
