--- a/client/src/FirstThenCard.css
+++ b/client/src/FirstThenCard.css
@@ -33,5 +33,5 @@ img{
     margin: 2px;
 }
 
-/* setup of card in container::
+/* setup of card in container:
 1. changed to width, from min-width to keep cards in container the same size as cards in the collection. */
