--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -4,15 +4,9 @@
     margin-top: 10%;
     margin-left: 20%;
     margin-right: 20%;
-    background-color: #a5a6f6;
+    /* background-color: #a5a6f6; */
+    background-image: radial-gradient(circle farthest-corner at center, rgba(93, 180, 252, 1) 35%, rgba(165, 166, 246, 1) 65%, rgba(215, 151, 221, 1) 100%);
     padding: 10%;
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
     font-weight: 100;
 }
-
-/* h1{
-    background-color: #a5a6f6;
-    padding: 100px 200px;
-    font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
-    font-weight: 100;
-} */
