--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -3,7 +3,8 @@
     margin-left: 35%;
     margin-right: 35%;
     padding: 1%;
-    background-color: #a5a6f6;
+    /* background-color: #a5a6f6; */
+    background-image: radial-gradient(circle farthest-corner at center, rgba(93, 180, 252, 1) 35%, rgba(165, 166, 246, 1) 65%, rgba(215, 151, 221, 1) 100%);
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
     font-size: 20px;
     font-weight: 100;
