--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -1,5 +1,6 @@
 .nav-bar{
-    background-color: #a5a6f6;
+    /* background-color: #a5a6f6; */
+    background-image: radial-gradient(circle farthest-corner at center, rgba(93, 180, 252, 1) 35%, rgba(165, 166, 246, 1) 65%, rgba(215, 151, 221, 1) 100%);
     padding: 2%;
 }
 
