--- a/client/src/Contact.css
+++ b/client/src/Contact.css
@@ -10,4 +10,11 @@
     padding: 10%;
     font-family: optima, segoe, segoe ui, candara, calibri, arial, sans-serif;
     font-weight: 100;
+    box-shadow: 10px 10px 10px rgba(45,55,68,0.30);
+    transition: 1s;
+}
+
+.contact-info h2:hover{
+    transform: scale(1.1);
+    z-index: 2;
 }
