--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -9,4 +9,11 @@
     font-size: 20px;
     font-weight: 100;
     text-align: center;
+    box-shadow: 10px 10px 10px rgba(45,55,68,0.30);
+    transition: 1s;
+}
+
+.login-form:hover{
+    transform: scale(1.1);
+    z-index: 2;
 }
